--- a/block-BNaabv/package.json
+++ b/block-BNaabv/package.json
@@ -1,14 +1,17 @@
 {
   "name": "altcampus-assignment",
   "version": "1.0.0",
-  "description": "",
-  "main": "",
+  "description": "this is a demo",
+  "main": "index.js",
   "scripts": {
-    "test": "jest --passWithNoTests"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "AltCampus",
-  "license": "GNU GPL V3",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "jest": "^26.0.1"
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
   }
 }
