--- a/block-BNaabv/package.json
+++ b/block-BNaabv/package.json
@@ -1,17 +1,17 @@
 {
   "name": "altcampus-assignment",
   "version": "1.0.0",
-  "description": "this is a demo",
-  "main": "index.js",
+  "description": "",
+  "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --passWithNoTests"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "AltCampus",
+  "license": "GNU GPL V3",
   "dependencies": {
     "cookie-parser": "^1.4.6",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
+    "jest": "^26.0.1",
     "morgan": "^1.10.0"
   }
 }
