--- a/block-BNaabw/package.json
+++ b/block-BNaabw/package.json
@@ -9,6 +9,9 @@
   "author": "AltCampus",
   "license": "GNU GPL V3",
   "dependencies": {
-    "jest": "^26.0.1"
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "jest": "^26.0.1",
+    "morgan": "^1.10.0"
   }
 }
